--- a/src/styles/AnimatedElement.css
+++ b/src/styles/AnimatedElement.css
@@ -4,14 +4,14 @@
 
 .animated-element {
   position: fixed; /* Keeps the element fixed during scrolling */
-  width: 100%;
+  width: 80%;
   transition: transform 0.5s ease;
 }
 
 .image-element {
   position: absolute;
-  right: -250px;
-  max-width: 150%;
+  right: -350px;
+  max-width: 200%;
   transition: transform, opacity;
 }
 
@@ -21,5 +21,16 @@
 }
 
 .scroll-up {
-  transform: translateY(-130%);
+  transform: translateY(-200%);
+}
+
+.button-element {
+  position: absolute;
+  color: #eee;
+  opacity: 0; /* Initially set the opacity to 0 */
+  transition: opacity 0.2s ease-in; /* Add a transition effect for opacity */
+}
+
+.button-show {
+  opacity: 1; /* When the scroll position reaches the trigger point, set opacity to 1 */
 }
