--- a/src/styles/AnimatedElement.css
+++ b/src/styles/AnimatedElement.css
@@ -5,7 +5,7 @@
 .animated-element {
   position: fixed; /* Keeps the element fixed during scrolling */
   width: 80%;
-  transition: transform 0.5s ease;
+  /* transition: transform 0.5s ease; */
 }
 
 .image-element {
@@ -20,9 +20,9 @@
   transform: translateX(-100%);
 }
 
-.scroll-up {
+/* .scroll-up {
   transform: translateY(-200%);
-}
+} */
 
 .button-element {
   position: absolute;
