--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#cargo::before,
+#about::before,
+#contact::before {
+  content: " ";
+  display: block;
+  visibility: hidden;
+  margin-top: -3em;
+  height: 2em;
+}
